<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_margin="@dimen/margin_padding"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/txtTitulo"
                android:text="@string/main_txtTitulo"
                android:layout_gravity="center"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/main_txtTitulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txtNome"
                android:text="@string/main_nome_completo"
                android:textSize="@dimen/main_txtCampos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                />
            <EditText
                android:id="@+id/editNome"
                android:inputType="textPersonName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/txtCidade"
                android:text="@string/main_cidade"
                android:textSize="@dimen/main_txtCampos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/editCidade"
                android:textSize="@dimen/main_txtCampos"
                android:inputType="textCapWords"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txtUf"
                android:text="@string/txtUf"
                android:textSize="@dimen/main_txtCampos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/editUf"
                android:inputType="textCapCharacters"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txtProfissao"
                android:text="@string/txtProfissao"
                android:textSize="@dimen/main_txtCampos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/editProfissao"
                android:inputType="textCapSentences"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txtEmpresa"
                android:text="@string/txt_nome_da_empresa"
                android:textSize="@dimen/main_txtCampos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/editEmpresa"
                android:inputType="textCapSentences"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txtTelefone"
                android:text="@string/txt_telefone"
                android:textSize="@dimen/main_txtCampos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/editTelefone"
                android:inputType="phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txtEmail"
                android:text="@string/txtE_mail"
                android:textSize="@dimen/main_txtCampos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/editEmail"
                android:inputType="textEmailAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnSalvar"
                android:text="@string/txtSalvar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btnLimpar"
                android:text="@string/btnLimpar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>

    </ScrollView>



</LinearLayout>
